# kaliscope

./: .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  SConscript  SConstruct  default-mac.sconf  default-rpi.sconf  default.sconf  init.sh  setupGpio.py  startKalisync.sh
applications/: CMakeLists.txt
applications/kaligative/: SConscript
applications/kaligative/src/: main.cpp
applications/kaliscope_ncurses/: SConscript
applications/kaliscope_qt/: CMakeLists.txt  SConscript
applications/kaliscope_qt/presets/: dcraw.json  funky.json  orange-filt.json  rococo.json
applications/kaliscope_qt/src/: CMakeLists.txt  KaliscopeWin.cpp  KaliscopeWin.hpp  main.cpp  ui_KaliscopeWin.hpp
applications/kaliscope_qt/src/opengl/: PlayerOpenGLWidget.cpp  PlayerOpenGLWidget.hpp  openglAdds.cpp  openglAdds.hpp
applications/kaliscope_qt/src/opengl/shaders/: build.sh  negative_frag.glsl  negative_vert.glsl  qrc_shaders.cpp  shaders.qrc
applications/kaliscope_qt/src/resources/: Kaliscope.icns  build.sh  kaliscopeResources.qrc  qrc_kaliscopeResources.cpp
applications/kaliscope_qt/src/settings/: EditPluginParamsDialog.cpp  EditPluginParamsDialog.hpp  PluginListDialog.cpp  PluginListDialog.hpp  RecordingSettingsDialog.cpp  RecordingSettingsDialog.hpp  TablePluginItem.hpp  ui_EditPluginParamsDialog.hpp  ui_PluginListDialog.hpp  ui_RecordingSettingsDialog.hpp
applications/kaliscope_qt/src/settings/ui/: EditPluginParamsDialog.ui  PluginListDialog.ui  RecordingSettingsDialog.ui
applications/kaliscope_qt/src/ui/: KaliscopeWin.ui
applications/kalisync/: SConscript
applications/kalisync/src/: GpioWatcher.cpp  GpioWatcher.hpp  main.cpp
applications/kalisync/src/projector/: IProjector.cpp  IProjector.hpp  TinyDisplayProjector.cpp  TinyDisplayProjector.hpp
cmake/: FindTuttleHost.cmake  TuttleMacros.cmake  UseMvpPlayerBoost.cmake  UseTuttleBoost.cmake
libraries/: SConscript.sequenceparser
libraries/kali-core/: CMakeLists.txt  SConscript
libraries/kali-core/src/: CMakeLists.txt
libraries/kali-core/src/kali-core/: KaliscopeEngine.cpp  KaliscopeEngine.hpp  VideoPlayer.cpp  VideoPlayer.hpp  settingsTools.cpp  settingsTools.hpp  stateMachineEvents.cpp  stateMachineEvents.hpp  typedefs.hpp
libraries/openfxHack/: CMakeLists.txt  README.md  SConscript
libraries/terry/: CMakeLists.txt  SConscript
libraries/terry/src/terry/: entry.cpp  globals.hpp
libraries/terry/src/terry/colorspace/layout/: yuv.hpp
libraries/tuttlePlugin/: CMakeLists.txt  README.md  SConscript
libraries/tuttlePlugin/src/: CMakeLists.txt
libraries/tuttlePlugin/src/tuttle/common/utils/: Formatter.hpp
ofxPlugins/: CMakeLists.txt  README.txt  package.sh  package_all.sh
ofxPlugins/cameraReader/: CMakeLists.txt  SConscript
ofxPlugins/cameraReader/CameraReader/src/: CameraReaderAlgorithm.hpp  CameraReaderDefinitions.hpp  CameraReaderPlugin.cpp  CameraReaderPlugin.hpp  CameraReaderPluginFactory.cpp  CameraReaderPluginFactory.hpp  CameraReaderProcess.hpp  CameraReaderProcess.tcc  CameraVideo.cpp  CameraVideo.hpp  mainEntry.cpp
ofxPlugins/cameraReader/src/: CameraInput.cpp  CameraInput.hpp  CameraReaderDefinitions.hpp  CameraReaderPlugin.cpp  CameraReaderPlugin.hpp  CameraReaderPluginFactory.cpp  CameraReaderProcess.hpp  CameraReaderProcess.tcc  QtCameraReaderAlgorithm.hpp  QtCameraReaderDefinitions.hpp  QtCameraReaderPlugin.cpp  QtCameraReaderPlugin.hpp  QtCameraReaderProcess.hpp  mainEntry.cpp
ofxPlugins/colorMaskRemover/src/: ColorMaskAnalyzingProcess.hpp  ColorMaskAnalyzingProcess.tcc  ColorMaskRemoverAlgorithm.hpp  ColorMaskRemoverDefinitions.hpp  ColorMaskRemoverPlugin.cpp  ColorMaskRemoverPlugin.hpp  ColorMaskRemoverPluginFactory.cpp  ColorMaskRemoverPluginFactory.hpp  ColorMaskRemoverProcess.hpp  ColorMaskRemoverProcess.tcc  mainEntry.cpp
ofxPlugins/colorNegInvert/: CMakeLists.txt
ofxPlugins/colorNegInvert/src/: ColorNegInvertAlgorithm.hpp  ColorNegInvertAnalyzingProcess.hpp  ColorNegInvertAnalyzingProcess.tcc  ColorNegInvertDefinitions.hpp  ColorNegInvertPlugin.cpp  ColorNegInvertPlugin.hpp  ColorNegInvertPluginFactory.cpp  ColorNegInvertPluginFactory.hpp  ColorNegInvertProcess.hpp  ColorNegInvertProcess.tcc  mainEntry.cpp
ofxPlugins/dcrawReader/: CMakeLists.txt  SConscript
ofxPlugins/dcrawReader/src/: DcrawReaderAlgorithm.hpp  DcrawReaderDefinitions.hpp  DcrawReaderPlugin.cpp  DcrawReaderPlugin.hpp  DcrawReaderPluginFactory.cpp  DcrawReaderPluginFactory.hpp  DcrawReaderProcess.hpp  DcrawReaderProcess.tcc  dcraw.cpp  dcraw.hpp  mainEntry.cpp
ofxPlugins/filterCleaner/: SConscript
ofxPlugins/filterCleaner/src/: FilterCleanerAlgorithm.hpp  FilterCleanerDefinitions.hpp  FilterCleanerPlugin.cpp  FilterCleanerPlugin.hpp  FilterCleanerPluginFactory.cpp  FilterCleanerPluginFactory.hpp  FilterCleanerProcess.hpp  FilterCleanerProcess.tcc  mainEntry.cpp
ofxPlugins/qtCameraReader/: CMakeLists.txt
ofxPlugins/qtCameraReader/src/: CameraReaderDefinitions.hpp  CameraReaderPlugin.cpp  CameraReaderPlugin.hpp  QtCameraReaderAlgorithm.hpp  QtCameraReaderDefinitions.hpp  QtCameraReaderPlugin.cpp  QtCameraReaderPlugin.hpp  QtCameraReaderPluginFactory.cpp  QtCameraReaderPluginFactory.hpp  QtCameraReaderProcess.hpp  QtCameraReaderProcess.tcc  mainEntry.cpp
ofxPlugins/ximeaPlug/XimeaCameraReader/src/: XimeaCameraReaderAlgorithm.hpp  XimeaCameraReaderDefinitions.hpp  XimeaCameraReaderPlugin.cpp  XimeaCameraReaderPlugin.hpp  XimeaCameraReaderPluginFactory.cpp  XimeaCameraReaderPluginFactory.hpp  XimeaCameraReaderProcess.hpp  XimeaCameraReaderProcess.tcc  mainEntry.cpp
plugins/: CMakeLists.txt
plugins/telecinema/: CMakeLists.txt  SConscript
plugins/telecinema/src/: KaliscopeTelecinemaLogic.cpp  KaliscopeTelecinemaLogic.hpp  KaliscopeTelecinemaPlugin.cpp  KaliscopeTelecinemaPlugin.hpp  defines.hpp  kaliscopeTelecinemaPlugin.json  recorderEvents.cpp  recorderEvents.hpp
presets/: readme.txt
tools/copyright/: append_copyright.sh  copyright.txt
