cmake_minimum_required(VERSION 2.8.11)

project(TuttlePlugin CXX)

# Set sequenceParser versions
SET( TUTTLE_PLUGIN_VERSION_MAJOR "1" )
SET( TUTTLE_PLUGIN_VERSION_MINOR "0" )
SET( TUTTLE_PLUGIN_VERSION_MICRO "0" )
SET( TUTTLE_PLUGIN_VERSION ${TUTTLE_PLUGIN_VERSION_MAJOR}.${TUTTLE_PLUGIN_VERSION_MINOR}.${TUTTLE_PLUGIN_VERSION_MICRO} )

# Define sequenceParser versions
add_definitions(-DTUTTLE_PLUGIN_VERSION_MAJOR=${TUTTLE_PLUGIN_VERSION_MAJOR})
add_definitions(-DTUTTLE_PLUGIN_VERSION_MINOR=${TUTTLE_PLUGIN_VERSION_MINOR})
add_definitions(-DTUTTLE_PLUGIN_VERSION_MICRO=${TUTTLE_PLUGIN_VERSION_MICRO})

# CPP flags on debug / release mode
if(MSVC)
        SET( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd" )
        SET( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT" )
else()
        SET( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -fPIC -pg -g" )
        SET( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -fPIC -O3" )
endif()

ADD_SUBDIRECTORY(src)
